--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,18 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+      <header id="header">
+
+      </header>
+      <main>
+        <div id="content__container" class="content__container">
+        </div>
+      </main>
+      <footer id="footer">
+
+      </footer>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
