--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root">
+    <main id="root">
       <header id="header">
 
       </header>
@@ -33,10 +33,10 @@
         <div id="content__container" class="content__container">
         </div>
       </main>
-      <footer id="footer">
+      <footer id="footer" class="footer">
 
       </footer>
-    </div>
+    </main>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
