--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <main id="root">
+    <div id="root" class="page-root">
       <header id="header">
 
       </header>
@@ -33,7 +33,7 @@
         <div id="content__container" class="content__container">
         </div>
       </main>
-      <footer id="footer" class="footer">
+      <footer id="footer">
 
       </footer>
     </main>
