Styling and basic stats fetching

--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,17 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root" class="page-root">
-      <header id="header">
+      <header id="header-content" class="header">
 
       </header>
       <main>
-        <div id="content__container" class="content__container">
+        <div id="app-content" class="content container">
         </div>
       </main>
-      <footer id="footer">
-
+      <footer class="footer">
+        <div class="container  footer__copyright">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
       </footer>
     </main>
     <!--
